// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal test 1`] = `
"<!DOCTYPE html><html data-reactroot><head><meta charset=\\"utf-8\\"><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no\\"><script>window.g_useSSR=true;
  window.g_initialData = {\\"data\\":{\\"ssr\\":\\"http:\\\\u002F\\\\u002F127.0.0.1:7001\\",\\"csr\\":\\"http:\\\\u002F\\\\u002F127.0.0.1:8000\\"}};</script><script>window.routerBase = \\"/\\";</script></head><body><div id=\\"root\\"><div class=\\"normal___1KW4T\\"><h1>Page index</h1><h2>csr: <!-- -->http://127.0.0.1:8000</h2></div></div><script src=\\"/umi.js\\"></script></body></html>"
`;

exports[`normal test 2`] = `
"<!DOCTYPE html><html data-reactroot><head><meta charset=\\"utf-8\\"><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no\\"><script>window.g_useSSR=true;
  window.g_initialData = {};</script><script>window.routerBase = \\"/\\";</script></head><body><div id=\\"root\\"><div>news Index</div></div><script src=\\"/umi.js\\"></script></body></html>"
`;

exports[`normal test 3`] = `
"<!DOCTYPE html><html data-reactroot><head><meta charset=\\"utf-8\\"><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no\\"><script>window.g_useSSR=true;
  window.g_initialData = {};</script><script>window.routerBase = \\"/\\";</script></head><body><div id=\\"root\\"><h3>detail</h3></div><script src=\\"/umi.js\\"></script></body></html>"
`;

exports[`normal test 4`] = `
"<!DOCTYPE html><html data-reactroot><head><meta charset=\\"utf-8\\"><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no\\"><script>window.g_useSSR=true;
  window.g_initialData = {\\"list\\":[\\"foo\\",\\"bar\\"]};</script><script>window.routerBase = \\"/\\";</script></head><body><div id=\\"root\\"><div class=\\"normal___1KMnC\\"><h1>Page users111</h1><h2>users</h2><ul><li>foo</li><li>bar</li></ul></div></div><script src=\\"/umi.js\\"></script></body></html>"
`;
